<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailSongActivity">

    <ImageView
        android:id="@+id/img_item_photo"
        android:layout_width="450dp"
        android:layout_height="400dp"
        tools:src="@tools:sample/avatars"
        android:background="@color/white" />

    <TextView
        android:id="@+id/tv_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="470dp"
        android:layout_marginLeft="20dp"
        tools:text="@string/song_name" />
    
    <TextView
        android:id="@+id/tv_item_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_item_name"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        tools:text="@string/description"/>

    <TextView
        android:id="@+id/tv_item_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_item_description"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        tools:text="@string/genre"/>

</RelativeLayout>