<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/adit"
        android:layout_width="match_parent"
        android:layout_height="243dp"
        android:src="@drawable/adit" />

    <TextView
        android:id="@+id/my_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/adit"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="71dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="66dp"
        android:text="@string/my_nama"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/my_email"
        android:layout_width="wrap_content"
        android:layout_height="68dp"
        android:layout_below="@+id/my_name"
        android:layout_alignStart="@+id/my_name"
        android:layout_alignEnd="@+id/my_name"
        android:layout_marginStart="7dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="0dp"
        android:text="@string/my_email"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/my_univ"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_email"
        android:layout_alignStart="@+id/my_email"
        android:layout_alignEnd="@+id/my_email"
        android:layout_marginStart="39dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="47dp"
        android:text="@string/univ"
        android:textSize="16sp" />


</ScrollView>